fix layout alignment, add more to intro

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ h3 {
   padding: 0 20px;
 }
 
+.treemap-container {
+  padding-top: 2rem;
+  padding-left: 8rem;
+}
+
 .chart-container {
   /* border: 1px solid #d3d3d3; */
   margin: 0 auto;
